# otus-cpp-basics-hw02

./: CMakeLists.txt  README.md
source/: example.cpp  hello_world.cpp  move_me_out.cpp
